section of editing name of category completed
